--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon", 
+    "start": "node app.js"
   },
   "author": "Yana",
   "license": "ISC",
   "devDependencies": {
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.1.1"
   }
 }
